--- a/src/pages/work/[id].astro
+++ b/src/pages/work/[id].astro
@@ -37,9 +37,9 @@ const dateRange =
     navActive: "work",
   }}
 >
-  <div class="max-w-360 m-auto px-6 py-16 flex flex-row gap-8">
+  <div class="max-w-360 m-auto px-6 py-16 flex flex-col sm:flex-row gap-8">
     {/* Content Column */}
-    <div class="w-1/3 sticky top-0">
+    <div class="w-full sm:w-1/3 sm:sticky top-0">
       <div class="flex flex-col gap-8 p-8 bg-card shadow-card-work text-primary">
         <div class="w-full flex flex-col gap-1">
           <h1 class="font-black italic text-primary text-3xl">{title}</h1>
@@ -67,7 +67,7 @@ const dateRange =
     </div>
 
     {/* Image Column */}
-    <div class="w-2/3 flex flex-col gap-10">
+    <div class="w-full sm:w-2/3 flex flex-col gap-10">
       {
         images?.map((image) => (
           <div class="bg-work-card shadow-card-work block">
