--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,36 @@
 ---
 import Main from "@/layouts/Main.astro";
 import Card from "@/components/ui/Card.astro";
+
+const contactData = [
+  {
+    title: "email",
+    links: [
+      {
+        label: "work@alex-xo.com",
+        link: "mailto:work@alex-xo.com",
+      },
+    ],
+  },
+  {
+    title: "code",
+    links: [
+      {
+        label: "GitHub",
+        link: "https://github.com/alx-xo",
+      },
+    ],
+  },
+  {
+    title: "socials",
+    links: [
+      {
+        label: "BlueSky",
+        link: "https://bsky.app/profile/alex-xo.com",
+      },
+    ],
+  },
+];
 ---
 
 <Main
@@ -17,34 +47,20 @@ import Card from "@/components/ui/Card.astro";
       </p>
 
       <ul class="list-none space-y-4">
-        <li class="space-y-1">
-          <h2 class="text-lg font-black italic">email</h2>
-          <p class="text-base font-medium mx-2">
-            <a href="mailto:work@alex-xo.com" class="underline underline-offset-2">
-              work@alex-xo.com
-            </a>
-          </p>
-        </li>
-        <li class="space-y-1">
-          <h2 class="text-lg font-black italic">code</h2>
-          <p class="text-base font-medium mx-2">
-            <a
-              href="https://github.com/AnalogMemory"
-              class="underline underline-offset-2"
-              target="_blank"
-            >
-              GitHub
-            </a>
-          </p>
-        </li>
-        <li class="space-y-1">
-          <h2 class="text-lg font-black italic">socials</h2>
-          <p class="text-base font-medium mx-2">
-            <a href="https://bsky.app/profile/alex-xo.com" class="underline underline-offset-2">
-              BlueSky
-            </a>
-          </p>
-        </li>
+        {
+          contactData.map(({ title, links }) => (
+            <li class="space-y-1">
+              <h2 class="text-lg font-black italic">{title}</h2>
+              {links.map(({ label, link }) => (
+                <p class="text-base font-medium mx-2">
+                  <a href={link} class="underline underline-offset-2">
+                    {label}
+                  </a>
+                </p>
+              ))}
+            </li>
+          ))
+        }
       </ul>
     </Card>
   </div>
