Self host InterVariable font

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,14 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@font-face {
+  font-family: InterVariable;
+  font-style: italic;
+  font-weight: 100 900;
+  font-display: swap;
+  src: url("/fonts/InterVariable-Italic.woff2?v=4.1") format("woff2");
+}
+
 @theme {
   --font-sans:
     InterVariable, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
