--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,14 +14,16 @@ import Card from "@/components/ui/Card.astro";
     <Card title="about">
       <h2 class="text-xl font-black italic">Hi I’m Alex and I like to make things</h2>
 
-      <p class="text-base font-medium">
+      <p class="text-base font-medium not-italic">
         Sometimes I’m a FrontEnd Developer, and have been a UX Engineer. Always interested in making
         the web enjoyable.
         {" "}
         <a href="/work" class="underline underline-offset-2">View my work</a>
       </p>
 
-      <p class="text-base font-medium">I also dabble in design, block prints, and painting</p>
+      <p class="text-base font-medium not-italic">
+        I also dabble in design, block prints, and painting
+      </p>
     </Card>
   </div>
 </Main>
