--- a/src/pages/work/[id].astro
+++ b/src/pages/work/[id].astro
@@ -58,8 +58,8 @@ const dateRange =
 
         {
           tech && tech?.length > 0 && (
-            <p class="text-sm text-primary">
-              Tech: <span class="font-medium">{tech.join(", ")}</span>
+            <p class="text-sm text-primary not-italic font-medium">
+              Tech: <span class="font-bold ">{tech.join(", ")}</span>
             </p>
           )
         }
