Update paths to use trailing slash

--- a/src/components/ui/Header.astro
+++ b/src/components/ui/Header.astro
@@ -3,8 +3,8 @@ const { navActive } = Astro.props;
 
 const navItems = [
   { name: "home", href: "/" },
-  { name: "work", href: "/work" },
-  { name: "contact", href: "/contact" },
+  { name: "work", href: "/work/" },
+  { name: "contact", href: "/contact/" },
 ];
 ---
 
