--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Card from "@/components/ui/Card.astro";
         Sometimes I’m a FrontEnd Developer, and have been a UX Engineer. Always interested in making
         the web enjoyable.
         {" "}
-        <a href="/work" class="underline underline-offset-2">View my work</a>
+        <a href="/work/" class="underline underline-offset-2">View my work</a>
       </p>
 
       <p class="text-base font-medium not-italic">
