--- a/src/components/ui/WorkCard.astro
+++ b/src/components/ui/WorkCard.astro
@@ -17,6 +17,7 @@ const {
 } = Astro.props;
 
 const isSmallCard = cardSize === "small";
+const path = `/work/${id}/`;
 ---
 
 {
@@ -25,13 +26,13 @@ const isSmallCard = cardSize === "small";
       <div class="bg-work-card shadow-card-work flex flex-col">
         <div class="bg-gray-200 w-full">
           {cover && (
-            <a href={`/work/${id}`} class="block">
+            <a href={path} class="block">
               <Image src={cover} alt={coverAlt} class="aspect-400/240 object-cover object-top" />
             </a>
           )}
         </div>
         <div class="bg-card text-primary px-5 sm:px-6 py-3 sm:py-4 flex">
-          <a href={`/work/${id}`}>
+          <a href={path}>
             <h3 class="font-black italic text-md sm:text-lg">{title}</h3>
           </a>
         </div>
@@ -42,7 +43,7 @@ const isSmallCard = cardSize === "small";
       <div class="bg-work-card shadow-card-work flex flex-row gap-2">
         <div class="bg-card text-primary flex flex-col px-5 sm:px-6 py-3 sm:py-4 flex-2/5">
           <div class="mt-auto">
-            <a href={`/work/${id}`}>
+            <a href={path}>
               <h3 class="font-black italic text-md sm:text-lg">{title}</h3>
             </a>
           </div>
@@ -50,7 +51,7 @@ const isSmallCard = cardSize === "small";
 
         <div class="bg-gray-200 flex-3/5 grow-0">
           {cover && (
-            <a href={`/work/${id}`} class="block">
+            <a href={path} class="block">
               <Image src={cover} alt={coverAlt} />
             </a>
           )}
