--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -32,6 +32,8 @@ const faviconSvg = await getImage({ src: faviconSvgSrc, format: "svg" });
     <link rel="icon" href={faviconSvg.src} type="image/svg+xml" />
     <link rel="apple-touch-icon" href={appleTouchIcon.src} />
 
+    <link rel="sitemap" href="/sitemap-index.xml" />
+
     <meta name="description" content={pageDescription} />
     <title>{pageTitle}</title>
   </head>
