--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -36,6 +36,7 @@ const contactData = [
 <Main
   page={{
     title: "contact ・ alex-xo",
+    description: "Reach out to discuss new projects",
     navActive: "contact",
   }}
 >
