--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -16,7 +16,7 @@ const works = {
 <Main
   page={{
     title: "work ・ alex-xo",
-    description: "FrontEnd Development Work",
+    description: "Portfolio of my FrontEnd Development works",
     navActive: "work",
   }}
 >
